tests/ui/codegen/evm-ir/validation/stack_underflow.evmir
//~? ERROR: EVM IR verification failed: block 0: `dup2` reaches depth 2 but the stack has 1
@module module

bb0:
  push 1
  dup2
  stop
